<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/help_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:fillViewport="true"
    tools:context=".HelpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/screen_margin"
        android:paddingTop="@dimen/space_lg"
        android:paddingBottom="@dimen/space_xl">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_lg"
            android:text="@string/help_intro"
            android:textAppearance="@style/TextAppearance.Bruff.Body" />

        <TextView
            style="@style/HelpSectionTitle"
            android:text="@string/help_section_getting_started_title" />
        <TextView
            style="@style/HelpSectionBody"
            android:text="@string/help_section_getting_started_body" />

        <TextView
            style="@style/HelpSectionTitle"
            android:text="@string/help_section_start_title" />
        <TextView
            style="@style/HelpSectionBody"
            android:text="@string/help_section_start_body" />

        <TextView
            style="@style/HelpSectionTitle"
            android:text="@string/help_section_route_title" />
        <TextView
            style="@style/HelpSectionBody"
            android:text="@string/help_section_route_body" />

        <TextView
            style="@style/HelpSectionTitle"
            android:text="@string/help_section_arrival_title" />
        <TextView
            style="@style/HelpSectionBody"
            android:text="@string/help_section_arrival_body" />

        <TextView
            style="@style/HelpSectionTitle"
            android:text="@string/help_section_map_title" />
        <TextView
            style="@style/HelpSectionBody"
            android:text="@string/help_section_map_body" />

        <TextView
            style="@style/HelpSectionTitle"
            android:text="@string/help_section_tips_title" />
        <TextView
            style="@style/HelpSectionBody"
            android:text="@string/help_section_tips_body" />

    </LinearLayout>

</ScrollView>
